joomla before render

--- a/src/j/moneyinst/language/en-GB/en-GB.plg_system_moneyinst.ini
+++ b/src/j/moneyinst/language/en-GB/en-GB.plg_system_moneyinst.ini
@@ -1,6 +1,6 @@
 
-PLG_CONTENT_MONEYINST="MoneyInst.com partner program plugin"
-PLG_CONTENT_MONEYINST_XML_DESCRIPTION="<p><h3>MoneyInst PLUGIN.</h3></p><p>You can use this plugin to change download links.</p>"
+PLG_SYSTEM_MONEYINST="System - MoneyInst.com partner program plugin"
+PLG_SYSTEM_MONEYINST_XML_DESCRIPTION="<p><h3>MoneyInst PLUGIN.</h3></p><p>You can use this plugin to change download links.</p>"
 ; FIELD
 JFIELD_PLG_MONEYINST_SID_LABEL="Your Id in PP Money inst"
 JFIELD_PLG_MONEYINST_SID_DESC="You can find it in your cabinet on site moneyinst.com"
