--- a/src/j/moneyinst/language/ru-RU/ru-RU.plg_system_moneyinst.ini
+++ b/src/j/moneyinst/language/ru-RU/ru-RU.plg_system_moneyinst.ini
@@ -1,6 +1,6 @@
 
-PLG_CONTENT_MONEYINST="Плагин партнерской программы MoneyInst.com"
-PLG_CONTENT_MONEYINST_XML_DESCRIPTION="<p><h3>MoneyInst PLUGIN.</h3></p>
+PLG_SYSTEM_MONEYINST="Системный - Плагин партнерской программы MoneyInst.com"
+PLG_SYSTEM_MONEYINST_XML_DESCRIPTION="<p><h3>MoneyInst PLUGIN.</h3></p>
   <p>С помощью данного плагина вы сможете подменять ссылки для работы с партнерской программой MoneyInst.</p>"
 ; FIELD
 JFIELD_PLG_MONEYINST_SID_LABEL="Партнерский идентификатор"
