--- a/src/j25/moneyinst/language/ru-RU/ru-RU.plg_system_moneyinst.sys.ini
+++ b/src/j25/moneyinst/language/ru-RU/ru-RU.plg_system_moneyinst.sys.ini
@@ -1,4 +1,4 @@
 
-PLG_CONTENT_MONEYINST="Плагин партнерской программы MoneyInst.com"
-PLG_CONTENT_MONEYINST_XML_DESCRIPTION="<p><h3>MoneyInst PLUGIN.</h3></p>
+PLG_SYSTEM_MONEYINST="Системный - Плагин партнерской программы MoneyInst.com"
+PLG_SYSTEM_MONEYINST_XML_DESCRIPTION="<p><h3>MoneyInst PLUGIN.</h3></p>
 	<p>С помощью данного плагина вы сможете подменять ссылки для работы с партнерской программой MoneyInst.</p>"
